fix: contrast of text in the footer in the dark mode

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,4 +4,5 @@
 
 .custom-footer {
     background-color: #f0f0f0ed;
+    color: black;
 }
